--- a/styles.css
+++ b/styles.css
@@ -36,11 +36,13 @@ a {
     border-radius: 10px;
 }
 .player_one {
+	background-color: rgb(255, 255, 255);
     height: 400px;
     width: 500px;
     padding: 30px;
 }
 .player_two {
+	background-color: rgb(255, 255, 255);
     width: 500px;
     padding-left: 20px;
 }
